--- a/templates/admin_manage_production.html
+++ b/templates/admin_manage_production.html
@@ -104,7 +104,8 @@
             </tbody>
         </table>
         <!-- Back Button -->
-        <a href="{{ url_for('admin_panel') }}" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600">Back</a>
+    <div class="flex space-x-4">
+        <a href="{{ url_for('admin_panel') }}" class="bg-gray-500 text-white px-8 py-4 rounded hover:bg-gray-600">← Back</a>
     </div>
     
 </html>
