restored files updated

--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -17,6 +17,7 @@
         <a href="{{ url_for('add_admin') }}" class="block text-gray-700 hover:text-blue-500">Add New Admin</a>
         <a href="{{ url_for('delete_users') }}" class="block text-gray-700 hover:text-blue-500">Delete Users</a>
         <a href="{{ url_for('profile_management') }}" class="block text-gray-700 hover:text-blue-500">Profile Management</a>
+        <a href="{{ url_for('admin_income') }}" class="block text-gray-700 hover:text-blue-500">Income Overview</a>
         <a href="{{ url_for('add_product') }}" class="block text-gray-700 hover:text-blue-500">Add Product</a>
         <a href="{{ url_for('manage_batches') }}" class="block text-gray-700 hover:text-blue-500">Manage Batches</a>
         <!-- <a href="{{ url_for('manage_vaccinations') }}" class="block text-gray-700 hover:text-blue-500">Vaccination Schedule</a>
