--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -104,7 +104,7 @@
                 <select id="payment_method" name="payment_method" class="w-full p-2 border rounded" required>
                   <option value="cash_on_delivery">Cash on Delivery</option>
                   <option value="mobile_banking">Mobile Banking</option>
-                  <option value="bank_transfer">Bank Transfer</option>
+                  <option value="bank_transfer">Bkash Payment</option>
                 </select>
               </div>
               
